--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   path_provider: ^1.6.9
   permission_handler: ^3.1.0
+  audioplayers: ^0.15.1
 
 dev_dependencies:
   flutter_test:
