--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   path_provider: ^1.6.9
   permission_handler: ^3.1.0
   audioplayers: ^0.15.1
+  rxdart: ^0.24.1
+  rxdart_codemod: ^0.1.5
+  async: ^2.4.1
 
 dev_dependencies:
   flutter_test:
