--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   rxdart: ^0.24.1
   rxdart_codemod: ^0.1.5
   async: ^2.4.1
+  sliding_up_panel: ^1.0.2
 
 dev_dependencies:
   flutter_test:
