--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   rxdart_codemod: ^0.1.5
   async: ^2.4.1
   sliding_up_panel: ^1.0.2
+  audiotagger: ^1.1.0
+  mp3_info: ^0.1.3
 
 dev_dependencies:
   flutter_test:
