--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sliding_up_panel: ^1.0.2
   audiotagger: ^1.1.0
   mp3_info: ^0.1.3
+  flutter_plugin_playlist: ^0.1.5
 
 dev_dependencies:
   flutter_test:
